--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sajib's portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <section class="top-banner">
+
+        <div class="s">
+            <h1>Welcome to </h1>
+            <h1><span class="nm">Sajib's </span>World !</h1>
+            <h3>My Profile</h3>
+            <p>A Determined, honest and self driven enthusiastic learner who is competent and adaptable to new
+                technologies
+                and
+                aims to utilize potentiality and skill to do something innovative. A fresh CSE graduate having expertise
+                in
+                different
+                programming languages,Planning and working to build career with software development and Software
+                Quality
+                Assurance also intertested to work with Machine learning and Data science and Love to solve mathematical
+                problems.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sajibsec18/">Hire Me</a>
+        </div>
+        <div class="s">
+            <img src="images\my-bg.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
