--- a/index.html
+++ b/index.html
@@ -16,24 +16,19 @@
 
     <section class="top-banner">
 
-        <div class="s">
+        <div class="half-width">
             <h1>Welcome to </h1>
             <h1><span class="nm">Sajib's </span>World !</h1>
             <h3>My Profile</h3>
             <p>A Determined, honest and self driven enthusiastic learner who is competent and adaptable to new
-                technologies
-                and
-                aims to utilize potentiality and skill to do something innovative. A fresh CSE graduate having expertise
-                in
-                different
-                programming languages,Planning and working to build career with software development and Software
-                Quality
-                Assurance also intertested to work with Machine learning and Data science and Love to solve mathematical
-                problems.
+                technologiesandaims to utilize potentiality and skill to do something innovative. A fresh CSE graduate
+                having expertisein different programming languages,Planning and working to build career with software
+                development and Software Quality Assurance also intertested to work with Machine learning and Data
+                science and Love to solve mathematical problems.
             </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sajibsec18/">Hire Me</a>
         </div>
-        <div class="s">
+        <div class="half-width">
             <img src="images\my-bg.png" alt="">
         </div>
     </section>
