--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="half-width">
             <h1>Welcome to </h1>
-            <h1><span class="nm">Sajib's </span>World !</h1>
+            <h1><span class="name-title">Sajib's </span>World !</h1>
             <h3>My Profile</h3>
             <p>A Determined, honest and self driven enthusiastic learner who is competent and adaptable to new
                 technologiesandaims to utilize potentiality and skill to do something innovative. A fresh CSE graduate
@@ -33,6 +33,40 @@
         </div>
     </section>
 
+    <section class="goal">
+        <div class="half-width">
+            <img src="images\my-bg2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1><span id="career">Career Plan</span> </h1>
+            <h3>My Career Plan</h3>
+            <p> As a Computer Science student , I am planning to bulid my career in software development sector . My
+                first priority is become a app developer beside this i am intertested to work in the sector of Quality
+                assurance . In future , i have a plan to work with netwok secuirity .
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://drive.google.com/file/d/1OVlGky4VoYIsr7vr9YmWOy3aW_bZTyqC/view?usp=sharing">My Resume</a>
+        </div>
+
+    </section>
+
+    <h1>Experiences</h1>
+    <section class="exp">
+        <div class="width">
+            <h2>Full Stack Web Developer</h2>
+            <h4 class="duration">2021-Present | Pro Level Developer</h4>
+        </div>
+        <div class="width">
+            <h2>Baby Web Developer</h2>
+            <h4 class="duration">2020-2021 | Programming Hero Learner</h4>
+        </div>
+
+
+
+
+
+    </section>
 </body>
 
 </html>
