--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
         <div class="half-width">
             <h1>Welcome to </h1>
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <section class="goal">
+    <section class="goal flexible-container">
         <div class="half-width">
             <img src="images\my-bg2.png" alt="">
         </div>
@@ -50,16 +50,25 @@
         </div>
 
     </section>
-
-    <h1>Experiences</h1>
     <section class="exp">
-        <div class="width">
-            <h2>Full Stack Web Developer</h2>
-            <h4 class="duration">2021-Present | Pro Level Developer</h4>
-        </div>
-        <div class="width">
-            <h2>Baby Web Developer</h2>
-            <h4 class="duration">2020-2021 | Programming Hero Learner</h4>
+        <h1>Experiences</h1>
+
+        <div class="flexible-container">
+            <div id="fsd" class="exp-item">
+                <h2>Full Stack Web Developer</h2>
+                <h4 class="duration">2021-Present | Pro Level Developer</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="bd" class="exp-item">
+                <h2>Baby Web Developer</h2>
+                <h4 class="duration">2020-2021 | Programming Hero Learner</h4>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
 
 
@@ -68,5 +77,8 @@
 
     </section>
 </body>
+<footer>
+    <p>all right reserved by sajib</p>
+</footer>
 
 </html>
